[gd_scene load_steps=2 format=3 uid="uid://cp16nb78oucbc"]

[ext_resource type="Script" path="res://assets/Scripts/main_menu.gd" id="1_i2i4k"]

[node name="About" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2i4k")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Veldanava"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Made for WIG3004 Game Development
Faculty of Computer Science and Information Technology
University Malaya

Team Members:
Mohamad Sulaiman bin Mohd Hashim | 17096959
Nurmohamad Aiman bin Alias | U2100973
Muhammad Addin bin Ahmad Suhaimi | U2101491
Elvis Sawing anak Muran | U2101680
Adris Ichiro Bin Mohd Faris  | S2132467"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="AspectRatioContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back"

[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
